<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstarted3"
    tools:context=".Main5Activity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginBottom="250dp"
        android:text="@string/getstarted"
        android:textColor="@android:color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="240dp"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:text="@string/you_can_chat_and_ask_doctor_easily_on_online_chatting"/>

    <Button
        android:id="@+id/button11"
        android:onClick="back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/animationbutton3"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:text="@string/back" />

    <Button
        android:id="@+id/button12"
        android:onClick="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:background="@drawable/animationbutton2"
        android:text="@string/start" />
</RelativeLayout>