<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:background="@drawable/getstartred"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:text="@string/you_can_locate_the_nearest_hospital_nearest_bed_and_nearest_pharmacy_from_your_location_easily" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="250dp"
        android:text="@string/getstarted"
        android:textColor="@android:color/white"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button7"
        android:onClick="skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/animationbutton2"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:text="@string/skip" />

    <Button
        android:id="@+id/button8"
        android:onClick="next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:background="@drawable/animationbutton3"
        android:text="@string/next" />
</RelativeLayout>